force-app/main/default/objects/Case/fields/ALK_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>ALK_Admission_Date__c</fullName>
    <label>Fecha del Ingreso</label>
    <type>Date</type>
</CustomField>