force-app/main/default/objects/Case/fields/ALK_Almacen__c.field-meta.xml
<CustomField>
    <fullName>ALK_Almacen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Almacén</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>