force-app/main/default/objects/Case/fields/ALK_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Approval_Number__c</fullName>
    <externalId>true</externalId>
    <label>Número de Aprobación</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>