force-app/main/default/objects/Case/fields/ALK_Case_Observations__c.field-meta.xml
<CustomField>
    <fullName>ALK_Case_Observations__c</fullName>
    <label>Observaciones del Caso</label>
    <type>TextArea</type>
</CustomField>