force-app/main/default/objects/Case/fields/ALK_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>ALK_Ciudad__c</fullName>
    <formula>ALK_Factura__r.ALK_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>