force-app/main/default/objects/Case/fields/ALK_Clase__c.field-meta.xml
<CustomField>
    <fullName>ALK_Clase__c</fullName>
    <label>Clase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCIDENTE CON PRODUCTO</fullName>
            </value>
            <value>
                <fullName>ACCIDENTE EN LA TIENDA</fullName>
            </value>
            <value>
                <fullName>ACTUALIZACIÓN DE DATOS</fullName>
            </value>
            <value>
                <fullName>ALKOSTO- INCONVENIENTE CON EL TRÁMITE DE LA GARANTÍA</fullName>
            </value>
            <value>
                <fullName>APROBACIÓN PAK</fullName>
            </value>
            <value>
                <fullName>ASESORÍA Y ATENCIÓN AL CLIENTE</fullName>
            </value>
            <value>
                <fullName>BENEFICIOS TRIBUTARIOS</fullName>
            </value>
            <value>
                <fullName>CALIDAD PRODUCTO</fullName>
            </value>
            <value>
                <fullName>CAMBIO DE DIRECCIÓN DE DESPACHO</fullName>
            </value>
            <value>
                <fullName>CAMBIO DE DIRECCIÓN DE LA RECOGIDA</fullName>
            </value>
            <value>
                <fullName>CAMBIO DE FECHA DE LA RECOGIDA</fullName>
            </value>
            <value>
                <fullName>CAMBIO DE PRODUCTO NO ENTREGADO</fullName>
            </value>
            <value>
                <fullName>CAMBIO FECHA DE DESPACHO</fullName>
            </value>
            <value>
                <fullName>CAMBIO POR INSATISFACCIÓN MERCADO</fullName>
            </value>
            <value>
                <fullName>CANCELACIÓN DE LA RECOGIDA</fullName>
            </value>
            <value>
                <fullName>CANCELACIÓN DEL DESPACHO</fullName>
            </value>
            <value>
                <fullName>CANCELACIÓN DEL SERVICIO</fullName>
            </value>
            <value>
                <fullName>CANCELACIÓN SUSCRIPCIÓN ENVIO PROMOCIONES</fullName>
            </value>
            <value>
                <fullName>CANCELACIÓN TRANSACCIÓN</fullName>
            </value>
            <value>
                <fullName>COBRO DE INTERESES CRÉDITO 20 MINUTOS</fullName>
            </value>
            <value>
                <fullName>COBRO DE INTERESES TARJETA ALKOSTO</fullName>
            </value>
            <value>
                <fullName>DEMORA EN LA RECOGIDA DEL PRODUCTO</fullName>
            </value>
            <value>
                <fullName>DEMORA EN SERVICIO</fullName>
            </value>
            <value>
                <fullName>DEMORAS EN EXTRACTOS</fullName>
            </value>
            <value>
                <fullName>DESMONTE DE PUERTAS</fullName>
            </value>
            <value>
                <fullName>DETERIORADO</fullName>
            </value>
            <value>
                <fullName>DEVOLUCIÓN DE CHEQUE</fullName>
            </value>
            <value>
                <fullName>DOBLE COBRO DE TRANSACCIÓN</fullName>
            </value>
            <value>
                <fullName>DOBLE ENTREGA</fullName>
            </value>
            <value>
                <fullName>DOCUMENTOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>