force-app/main/default/objects/Case/fields/ALK_Closed_Case__c.field-meta.xml
<CustomField>
    <fullName>ALK_Closed_Case__c</fullName>
    <formula>IF(ISPICKVAL(Status,&apos;Closed&apos;), true,
			IF(ISPICKVAL(Status,&apos;Cambio Evitado Gestión Técnico&apos;), true,
						IF(ISPICKVAL(Status,&apos;Solución al Cliente&apos;), true,
												IF(ISPICKVAL(Status,&apos;Solicitud Finalizada con devolución&apos;), true,
															IF(ISPICKVAL(Status,&apos;No hay solicitudes pendientes&apos;), true, 
																		false)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Case</label>
    <type>Checkbox</type>
</CustomField>