force-app/main/default/objects/Case/fields/ALK_Contador_de_d_as_de_entregado__c.field-meta.xml
<CustomField>
    <fullName>ALK_Contador_de_d_as_de_entregado__c</fullName>
    <formula>ALK_Factura__r.ALK_Delivery_Days2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contador de días de entregado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>