force-app/main/default/objects/Case/fields/ALK_Created_Pack_Not_Updated__c.field-meta.xml
<CustomField>
    <fullName>ALK_Created_Pack_Not_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack Creado y no actualizado</label>
    <type>Checkbox</type>
</CustomField>