force-app/main/default/objects/Case/fields/ALK_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Address__c</fullName>
    <label>Dirección Entrega</label>
    <length>50</length>
    <type>Text</type>
</CustomField>