force-app/main/default/objects/Case/fields/ALK_Delivery_Document__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Document__c</fullName>
    <label>Documento del Entregador</label>
    <length>20</length>
    <type>Text</type>
</CustomField>