force-app/main/default/objects/Case/fields/ALK_Delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Email__c</fullName>
    <label>Correo del Entregador</label>
    <type>Email</type>
</CustomField>