force-app/main/default/objects/Case/fields/ALK_Delivery_Man_Address__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Man_Address__c</fullName>
    <label>Dirección del Entregador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>