force-app/main/default/objects/Case/fields/ALK_Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>ALK_Descripci_n__c</fullName>
    <formula>ALK_Factura__r.ALK_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura Descripción</label>
    <type>Text</type>
</CustomField>