force-app/main/default/objects/Case/fields/ALK_Division__c.field-meta.xml
<CustomField>
    <fullName>ALK_Division__c</fullName>
    <formula>ALK_Factura__r.ALK_Division__c</formula>
    <label>División</label>
    <type>Text</type>
</CustomField>