force-app/main/default/objects/Case/fields/ALK_Division_List__c.field-meta.xml
<CustomField>
    <fullName>ALK_Division_List__c</fullName>
    <formula>IF (  ALK_Division__c = &apos;Grandes Electrodomesticos&apos;  || ALK_Division__c = &apos;Pequenos Electrodomesticos&apos;, 
 TRUE,
 IF ( ALK_Division__c = &apos;Informática&apos; || ALK_Division__c = &apos;Telefonía&apos;,
 TRUE,
 IF ( ALK_Division__c = &apos;Muebles y colchones&apos;,
 TRUE,
 FALSE
)
)
)</formula>
    <label>Listado División</label>
    <type>Checkbox</type>
</CustomField>