force-app/main/default/objects/Case/fields/ALK_EAN__c.field-meta.xml
<CustomField>
    <fullName>ALK_EAN__c</fullName>
    <formula>ALK_Factura__r.ALK_EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAN</label>
    <type>Text</type>
</CustomField>