force-app/main/default/objects/Case/fields/ALK_Fecha_Despacho__c.field-meta.xml
<CustomField>
    <fullName>ALK_Fecha_Despacho__c</fullName>
    <formula>ALK_Factura__r.ALK_Dispatch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Despacho</label>
    <type>Date</type>
</CustomField>