force-app/main/default/objects/Case/fields/ALK_Fecha_Factura__c.field-meta.xml
<CustomField>
    <fullName>ALK_Fecha_Factura__c</fullName>
    <formula>ALK_Factura__r.ALK_Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Factura</label>
    <type>Date</type>
</CustomField>