force-app/main/default/objects/Case/fields/ALK_Fecha_pactada_entrega__c.field-meta.xml
<CustomField>
    <fullName>ALK_Fecha_pactada_entrega__c</fullName>
    <formula>ALK_Factura__r.ALK_Agreed_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha pactada entrega</label>
    <type>Date</type>
</CustomField>