force-app/main/default/objects/Case/fields/ALK_Grupo__c.field-meta.xml
<CustomField>
    <fullName>ALK_Grupo__c</fullName>
    <formula>ALK_Factura__r.ALK_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo</label>
    <type>Text</type>
</CustomField>