force-app/main/default/objects/Case/fields/ALK_IMEI__c.field-meta.xml
<CustomField>
    <fullName>ALK_IMEI__c</fullName>
    <label>IMEI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>