force-app/main/default/objects/Case/fields/ALK_IMEI_ODS_Case__c.field-meta.xml
<CustomField>
    <fullName>ALK_IMEI_ODS_Case__c</fullName>
    <formula>If( AND
(
NOT ISBLANK(ALK_IMEI__c ),NOT ISBLANK(ALK_IMEI_2__c )
),
ALK_IMEI__c + &quot;/&quot; + ALK_IMEI_2__c,
If(AND
(
NOT ISBLANK(ALK_IMEI__c ), ISBLANK(ALK_IMEI_2__c )
), ALK_IMEI__c,
If(AND
(
ISBLANK(ALK_IMEI__c ),NOT ISBLANK(ALK_IMEI_2__c )
),ALK_IMEI_2__c,
&quot; &quot;
) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALK IMEI ODS Case</label>
    <type>Text</type>
</CustomField>