force-app/main/default/objects/Case/fields/ALK_Is_RMA_Created__c.field-meta.xml
<CustomField>
    <fullName>ALK_Is_RMA_Created__c</fullName>
    <formula>NOT(ISBLANK(ALK_RMA_Automatic__c))</formula>
    <label>RMA Creado</label>
    <type>Checkbox</type>
</CustomField>