force-app/main/default/objects/Case/fields/ALK_Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>ALK_Last_Comment__c</fullName>
    <label>Ultimo Comentario</label>
    <type>TextArea</type>
</CustomField>