force-app/main/default/objects/Case/fields/ALK_Motivo_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>ALK_Motivo_de_Cierre__c</fullName>
    <description>El usuario selecciona el motivo por el cual desea cerrar el caso</description>
    <inlineHelpText>Por favor, seleccione el motivo por el cual desea cerrar el caso</inlineHelpText>
    <label>Motivo de Cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A FAVOR DE CLIENTE ASUME ALKOSTO</fullName>
            </value>
            <value>
                <fullName>A FAVOR DE CLIENTE ASUME MARCA</fullName>
            </value>
            <value>
                <fullName>CLIENTE DESISTE DE RECLAMACIÓN</fullName>
            </value>
            <value>
                <fullName>NEGATIVA SOLICITUD DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRODUCTO FUNCIONAL</fullName>
            </value>
            <value>
                <fullName>SIN CONTACTO CON CLIENTE</fullName>
            </value>
            <value>
                <fullName>SOLUCION CLIENTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>