force-app/main/default/objects/Case/fields/ALK_No_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>ALK_No_de_Despacho__c</fullName>
    <formula>ALK_Factura__r.ALK_Dispatch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No de Despacho</label>
    <type>Text</type>
</CustomField>