force-app/main/default/objects/Case/fields/ALK_No_de_la_Factura__c.field-meta.xml
<CustomField>
    <fullName>ALK_No_de_la_Factura__c</fullName>
    <formula>ALK_Factura__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No de la Factura</label>
    <type>Text</type>
</CustomField>