force-app/main/default/objects/Case/fields/ALK_No_de_RMA__c.field-meta.xml
<CustomField>
    <fullName>ALK_No_de_RMA__c</fullName>
    <formula>ALK_Factura__r.ALK_RMA_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No de RMA</label>
    <type>Text</type>
</CustomField>