force-app/main/default/objects/Case/fields/ALK_Numero_de_ingresos__c.field-meta.xml
<CustomField>
    <fullName>ALK_Numero_de_ingresos__c</fullName>
    <label>Número de ingresos al centro de servicio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>