force-app/main/default/objects/Case/fields/ALK_Numero_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>ALK_Numero_de_Pedido__c</fullName>
    <formula>ALK_Factura__r.ALK_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura: Número de Pedido</label>
    <type>Text</type>
</CustomField>