force-app/main/default/objects/Case/fields/ALK_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Order_Number__c</fullName>
    <label>Número de Pedido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>