force-app/main/default/objects/Case/fields/ALK_Pak_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>ALK_Pak_Batch_Status__c</fullName>
    <label>Estado proceso batch Pak</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No procesado</fullName>
                <default>true</default>
                <label>No procesado</label>
            </value>
            <value>
                <fullName>ODS/PQR relacionados</fullName>
            </value>
            <value>
                <fullName>ODS/PQR Cerrados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>