force-app/main/default/objects/Case/fields/ALK_Person_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Person_Account_Email__c</fullName>
    <label>Person Account Email</label>
    <type>Email</type>
</CustomField>