force-app/main/default/objects/Case/fields/ALK_Provider__c.field-meta.xml
<CustomField>
    <fullName>ALK_Provider__c</fullName>
    <formula>ALK_Factura__r.ALK_Provider__c</formula>
    <label>Proveedor</label>
    <type>Text</type>
</CustomField>