force-app/main/default/objects/Case/fields/ALK_Reapertura__c.field-meta.xml
<CustomField>
    <fullName>ALK_Reapertura__c</fullName>
    <formula>IF ( ISPICKVAL( ALK_Case_Reopen_Reason__c ,&apos;&apos;),&quot;&quot;,&quot;Si&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reapertura</label>
    <type>Text</type>
</CustomField>