force-app/main/default/objects/Case/fields/ALK_Reentry__c.field-meta.xml
<CustomField>
    <fullName>ALK_Reentry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reingreso</label>
    <type>Checkbox</type>
</CustomField>