force-app/main/default/objects/Case/fields/ALK_Related_ODS__c.field-meta.xml
<CustomField>
    <fullName>ALK_Related_ODS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso ODS Relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PAKs Relacionados</relationshipLabel>
    <relationshipName>PAKs_Relacionados</relationshipName>
    <type>Lookup</type>
</CustomField>