force-app/main/default/objects/Case/fields/ALK_Related_PQR__c.field-meta.xml
<CustomField>
    <fullName>ALK_Related_PQR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso PQR Relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PAKs Relacionado</relationshipLabel>
    <relationshipName>CasosPQRRelacionados</relationshipName>
    <type>Lookup</type>
</CustomField>