force-app/main/default/objects/Case/fields/ALK_Return_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Return_Number__c</fullName>
    <label>Numero de Devolución</label>
    <length>20</length>
    <type>Text</type>
</CustomField>