force-app/main/default/objects/Case/fields/ALK_Serial__c.field-meta.xml
<CustomField>
    <fullName>ALK_Serial__c</fullName>
    <label>Serial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>