force-app/main/default/objects/Case/fields/ALK_SIC_Demanda__c.field-meta.xml
<CustomField>
    <fullName>ALK_SIC_Demanda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIC Demanda</label>
    <type>Checkbox</type>
</CustomField>