force-app/main/default/objects/Case/fields/ALK_TAG__c.field-meta.xml
<CustomField>
    <fullName>ALK_TAG__c</fullName>
    <label>TAG</label>
    <length>30</length>
    <type>Text</type>
</CustomField>