force-app/main/default/objects/Case/fields/ALK_Tipo_Despacho__c.field-meta.xml
<CustomField>
    <fullName>ALK_Tipo_Despacho__c</fullName>
    <formula>ALK_Factura__r.ALK_Dispactch_Type__c</formula>
    <label>Tipo Despacho</label>
    <type>Text</type>
</CustomField>