force-app/main/default/objects/Case/fields/ALK_Transportador__c.field-meta.xml
<CustomField>
    <fullName>ALK_Transportador__c</fullName>
    <formula>ALK_Factura__r.ALK_Conveyor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportador</label>
    <type>Text</type>
</CustomField>