force-app/main/default/objects/Case/fields/ALK_Transportador_Homologado__c.field-meta.xml
<CustomField>
    <fullName>ALK_Transportador_Homologado__c</fullName>
    <formula>ALK_Factura__r.ALK_Approved_Transporter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportador Homologado</label>
    <type>Text</type>
</CustomField>