force-app/main/default/objects/Case/fields/ALK_Ultimo_Estado__c.field-meta.xml
<CustomField>
    <fullName>ALK_Ultimo_Estado__c</fullName>
    <formula>ALK_Factura__r.ALK_Last_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Último Estado</label>
    <type>Text</type>
</CustomField>