force-app/main/default/objects/Case/fields/ALK_Unidad_Despacho__c.field-meta.xml
<CustomField>
    <fullName>ALK_Unidad_Despacho__c</fullName>
    <formula>ALK_Factura__r.ALK_Dispatch_Unit__c</formula>
    <label>Unidad Despacho</label>
    <type>Text</type>
</CustomField>