force-app/main/default/objects/Case/fields/ALK_Unidad_Recoge__c.field-meta.xml
<CustomField>
    <fullName>ALK_Unidad_Recoge__c</fullName>
    <formula>ALK_Factura__r.ALK_Unit_Collects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidad Recoge</label>
    <type>Text</type>
</CustomField>