force-app/main/default/objects/Case/fields/ALK_Validacion_Politica__c.field-meta.xml
<CustomField>
    <fullName>ALK_Validacion_Politica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación Política</label>
    <type>Checkbox</type>
</CustomField>