force-app/main/default/objects/Case/fields/ALK_Voz_Cliente_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Voz_Cliente_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>Numero Caso Voz Cliente</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>