force-app/main/default/objects/Case/fields/ALK_WebPage__c.field-meta.xml
<CustomField>
    <fullName>ALK_WebPage__c</fullName>
    <label>Sitio</label>
    <type>TextArea</type>
</CustomField>