force-app/main/default/objects/Case/fields/Fecha_compra_plantilla__c.field-meta.xml
<CustomField>
    <fullName>Fecha_compra_plantilla__c</fullName>
    <formula>ALK_Factura__r.ALK_Purchase_Date__c</formula>
    <label>Fecha_compra_plantilla</label>
    <type>Date</type>
</CustomField>