force-app/main/default/objects/Case/fields/NoFactura_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>NoFactura_Plantilla__c</fullName>
    <formula>ALK_Factura__r.Name</formula>
    <label>NoFactura_Plantilla</label>
    <type>Text</type>
</CustomField>