force-app/main/default/objects/Case/fields/Producto_plantilla__c.field-meta.xml
<CustomField>
    <fullName>Producto_plantilla__c</fullName>
    <formula>ALK_Factura__r.ALK_Description__c</formula>
    <label>Producto_plantilla</label>
    <type>Text</type>
</CustomField>